--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>post-process</title>
+    <title>LED Billboard</title>
   </head>
   <script type="text/javascript" src="bundle.js"></script>
 </html>
